objects/Integration_Callout__c/Integration_Callout__c.object-meta.xml
<CustomObject>
    <description>The object stores the result of an outbound callout to third party system for logging purposes</description>
    <label>Integration Callout</label>
    <nameField>
        <label>Integration Callout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Callout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>