objects/Integration_Callout__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Holds information on endpoint being accessed</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>