objects/Integration_Callout__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Holds information on callout response from the third party service</description>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>