objects/Integration_Callout__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Holds information about Callout Status Code</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>