objects/Integration_Callout__c/listViews/Boomi_NetSuite_Customer_2_callouts.listView-meta.xml
<ListView>
    <fullName>Boomi_NetSuite_Customer_2_callouts</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payload__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Boomi_Customer_2</value>
    </filters>
    <label>Boomi NetSuite Customer 2 callouts</label>
</ListView>