objects/Integration_Callout__c/listViews/Dell_Boomi.listView-meta.xml
<ListView>
    <fullName>Dell_Boomi</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Endpoint__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>Payload__c</columns>
    <columns>Response__c</columns>
    <columns>Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Dell_Boomi</value>
    </filters>
    <label>Dell_Boomi</label>
</ListView>