objects/Integration_Callout__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payload__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Code__c</field>
        <operation>notEqual</operation>
        <value>200 OK</value>
    </filters>
    <filters>
        <field>Status_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Errors</label>
</ListView>