objects/Integration_Callout__c/listViews/Order_Callout.listView-meta.xml
<ListView>
    <fullName>Order_Callout</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payload__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Dell_Boomi</value>
    </filters>
    <label>Order Callout</label>
</ListView>