objects/Integration_Callout__c/listViews/Platform_Event_Account.listView-meta.xml
<ListView>
    <fullName>Platform_Event_Account</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payload__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Account_Event</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Platform Event - Account</label>
</ListView>