objects/Integration_Callout__c/listViews/Platform_Event_Orders.listView-meta.xml
<ListView>
    <fullName>Platform_Event_Orders</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payload__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Order_Event__c</value>
    </filters>
    <label>Platform Event - Orders</label>
    <language>en_US</language>
</ListView>