objects/Integration_Callout__c/listViews/Workato_Account.listView-meta.xml
<ListView>
    <fullName>Workato_Account</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payload__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Response__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Workato</value>
    </filters>
    <label>Workato - Account</label>
</ListView>